--- a/css/listing.css
+++ b/css/listing.css
@@ -46,3 +46,19 @@ h1{
   margin: 15px 10px;
   font-size: 2rem;
 }
+
+@media (max-width:990px) {
+h1{
+font-size:  2rem;
+}
+  .cta-heading{
+    font-size: 1rem;
+  }
+  .top-btn{
+    margin: 5% 0 15%;
+  }
+  .form-heading{
+    font-size: 1.5rem;
+  }
+  
+}
