--- a/css/styles.css
+++ b/css/styles.css
@@ -90,6 +90,12 @@ body{
   margin-top:25px;
 }
   .cta-heading{
-    font-size: 2rem;
+    font-size: 1rem;
+  }
+  .footer-text{
+    font-size: 0.5rem;
+  }
+  .logo-text{
+    display: none;
   }
 }
