--- a/css/listing.css
+++ b/css/listing.css
@@ -2,6 +2,7 @@ body{
   text-align: center;
     background-color: #0f4c75;
     font-family: 'Montserrat', sans-serif;
+    color: #fff;
 }
 h1{
   font-weight: 900;
@@ -14,6 +15,11 @@ h1{
 .top-img{
   width: 70%;
   border-radius: 50%;
+}
+.politics-img{
+  width: 35%;
+  border-radius: 50%;
+  margin-top: 40px;
 }
 .title-text{
   color: white;
@@ -37,9 +43,14 @@ h1{
 
 }
 
+.card{
+  background-color: #1b262c;
+}
+
+
 
 #footer .container-fluid{
-  padding: 0% 15% 7%;
+  padding: 0 15% 7%;
 }
 
 .footer-ico{
@@ -60,5 +71,8 @@ font-size:  2rem;
   .form-heading{
     font-size: 1.5rem;
   }
-  
+.politics-img{
+  width: 70%;
+  margin: 0;
+}
 }
