--- a/css/listing.css
+++ b/css/listing.css
@@ -8,6 +8,12 @@ h1{
   font-weight: 900;
   font-size: 3rem;
 }
+#top-title .container-fluid{
+  padding: 3% 15% 7%;
+}
+.row{
+  margin-top: 15%;
+}
 .top{
   background-color: #1b262c;
   color: white;
