--- a/css/listing.css
+++ b/css/listing.css
@@ -102,8 +102,18 @@ h3{
 .top-img{
   width: 100%;
 }
+
+.cta .container-fluid {
+  padding:7% 5% 5%;
+}
   .cta-heading{
     font-size: 1rem;
+  }
+
+  .cta .btn {
+    padding: 2% 4%;
+    font-size: 1rem;
+  }
   }
   .top-btn{
     margin: 5% 0 15%;
