--- a/css/styles.css
+++ b/css/styles.css
@@ -85,12 +85,13 @@ body{
   .title-heading{
     text-align: center;
     font-size: 2rem;
+    font-weight: 700;
   }
 .title-img{
   margin-top:25px;
 }
   .cta-heading{
-    font-size: 1rem;
+    font-size: 1.5rem;
   }
   .footer-text{
     font-size: 0.5rem;
