--- a/css/styles.css
+++ b/css/styles.css
@@ -98,14 +98,18 @@ body {
       display: none;
     }
     .navbar-nav {
+      display: flex;
       flex-direction: row;
+      justify-content: center;
+      align-items: center;
     }
     .nav-item {
       margin-top: 0;
       font-size: 2rem;
     }
     .nav-link {
-      margin-left: 60px;
+      /* margin-left: 65px; */
+
       padding: 0;
     }
   }
