--- a/css/styles.css
+++ b/css/styles.css
@@ -108,7 +108,7 @@ body {
       font-size: 2rem;
     }
     .nav-link {
-      /* margin-left: 65px; */
+      margin-left: 65px;
 
       padding: 0;
     }
