--- a/css/styles.css
+++ b/css/styles.css
@@ -44,7 +44,7 @@ body {
 }
 
 #title .container-fluid {
-  padding: 3% 15% 7%;
+  padding: 7% 15% 7%;
 }
 
 .title-container {
@@ -52,7 +52,7 @@ body {
 }
 
 .heading-container {
-  text-align: center;
+  text-align: left;
 }
 
 .title-heading {
@@ -64,7 +64,7 @@ body {
 }
 
 .title-img {
-  max-width: 100%;
+  width: 90%;
 }
 
 .cta-heading {
@@ -116,6 +116,9 @@ body {
     }
   }
 
+  .heading-container {
+    text-align: center;
+  }
   .colored-section {
     margin-left: 0;
   }
