--- a/css/gallery.css
+++ b/css/gallery.css
@@ -1,6 +1,6 @@
 body {
   background-color: #1b262c;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   text-align: center;
   color: #fff;
 }
@@ -25,8 +25,9 @@ body {
   background-color: #0f4c75;
 }
 
-img {
-  margin: 10px;
+.gallery-img {
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 h1 {
@@ -48,7 +49,7 @@ h2 {
   font-size: 2rem;
 }
 
-@media (max-width:990px) {
+@media (max-width: 990px) {
   .top-nav .container-fluid {
     padding: 2% 5% 0;
   }
