--- a/css/gallery.css
+++ b/css/gallery.css
@@ -122,16 +122,11 @@ h2 {
     padding-left: 3rem;
   }
 
-  .heading-container {
-    text-align: center;
-  }
-  .colored-section {
+  .top-nav,
+  .cta,
+  .footer {
     margin-left: 0;
   }
-  .white-section {
-    margin-left: 0;
-  }
-
   .footer {
     margin-bottom: 4rem;
   }
