animation on nav link press

--- a/css/gallery.css
+++ b/css/gallery.css
@@ -26,7 +26,9 @@ body {
 .nav-link {
   text-decoration: none;
 }
-
+.nav-link:active {
+  transform: translateY(-3px);
+}
 .top-nav,
 .cta,
 .footer {
